--- a/style/index.css
+++ b/style/index.css
@@ -28,3 +28,14 @@ h1, h2, h3, h4, h5 {
 header, nav, footer{
     border: 2px solid rgb(121, 119, 5)
 }
+
+/* ---------------------------Header-------------------------------*/
+
+header {
+    padding: 10%;
+    text-align: center;
+}
+
+nav {
+    padding: 5%;
+}
