--- a/style/index.css
+++ b/style/index.css
@@ -25,7 +25,7 @@ body {
 margin: 0px;
 padding: 0px;
 font-family: 'Work Sans', sans-serif;
-width: -webkit-fill-available;
+width: fit-content;
 letter-spacing: 1.5px;
 scroll-behavior: smooth;
 }
