added media queries

--- a/style/index.css
+++ b/style/index.css
@@ -194,3 +194,56 @@ i:hover {
     margin-top: 8%;
     margin-bottom: 5%;
 }
+
+/* ---------------------------Media-------------------------------*/
+
+@media(max-width: 800px) {
+
+    body {
+        font-size: 1rem;
+    }
+
+    h1 {
+        font-size: 5rem;
+    }
+
+    h2 {
+        font-size: 3rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    .txt-container p {
+        font-size: .7rem;
+    }
+    nav {
+        padding: 5%;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        margin-left: 25%;
+        margin-right: 25%;
+    }
+
+    .nav-container {
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-bottom: 4%;
+        padding-top: 4%;
+        border: 1px solid white;
+        cursor: pointer;
+        color: white;
+    }
+
+    .section-1 {
+        margin: 4%;
+    }
+
+}
+
+@media(max-width: 500px){
+
+
+}
