--- a/style/index.css
+++ b/style/index.css
@@ -280,5 +280,28 @@ i:hover {
 
 @media(max-width: 500px){
 
+    .section-2 img {
+        width: 150px;
+    }
+
+    body {
+        font-size: 1rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 0.7rem;
+    }
+
+    .nav-container a {
+        font-size: smaller;
+    }
 
 }
